--- a/acme-helm/values.yaml
+++ b/acme-helm/values.yaml
@@ -5,15 +5,17 @@
 replicaCount: 1
 
 image:
-  repository: nginx
-  tag: stable
+  repository: msathepivotal/acme-predictive-stocks
+  tag: latest
   pullPolicy: IfNotPresent
+
+containerPort: 8080
 
 nameOverride: ""
 fullnameOverride: ""
 
 service:
-  type: ClusterIP
+  type: LoadBalancer
   port: 80
 
 ingress:
