--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,29 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <distributionManagement>
+      <repository>
+        <id>central</id>
+        <name>Madhavs-MacBook-Pro.local-releases</name>
+        <url>http://localhost:8081/artifactory/my-first-repo</url>
+      </repository>
+      <snapshotRepository>
+        <id>snapshots</id>
+        <name>Madhavs-MacBook-Pro.local-snapshots</name>
+        <url>http://localhost:8081/artifactory/my-first-repo</url>
+      </snapshotRepository>
+    </distributionManagement>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-deploy-plugin</artifactId>
+              <version>2.7</version>
             </plugin>
         </plugins>
     </build>
